--- a/src/ISC.Netcode.UnitTests/ISC.Netcode.UnitTests.csproj
+++ b/src/ISC.Netcode.UnitTests/ISC.Netcode.UnitTests.csproj
@@ -22,8 +22,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ISC.Netcode\ISC.Netcode.csproj" />
-    <ProjectReference Include="..\ISC.Netcode.Client\ISC.Netcode.Client.csproj" />
-    <ProjectReference Include="..\ISC.Netcode.Server\ISC.Netcode.Server.csproj" />
+    <ProjectReference Include="..\ISC.Netcode.ClientSide\ISC.Netcode.ClientSide.csproj" />
+    <ProjectReference Include="..\ISC.Netcode.ServerSide\ISC.Netcode.ServerSide.csproj" />
   </ItemGroup>
 
 </Project>
